Small routing correction + setting up the webdesign

--- a/_webdesign/index.html
+++ b/_webdesign/index.html
@@ -12,6 +12,11 @@
     <link rel="stylesheet" href="./css/general.css">
 </head>
 <body>
+    <h1>Page title</h1>
+    <h2>H2 Title</h2>
+    <h3>H3 Title</h3>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad sequi magnam asperiores veritatis maiores perspiciatis in tempore quia provident, expedita, facilis explicabo! Soluta facere rem unde beatae provident tempore nihil.</p>
     
 </body>
 </html>
