--- a/_webdesign/index.html
+++ b/_webdesign/index.html
@@ -11,8 +11,7 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
     <!-- Internal styles -->
-    <link rel="stylesheet" href="./css/general.css">
-    <link rel="stylesheet" href="./css/components.css">
+    <link rel="stylesheet" href="./css/all.css">
 </head>
 <body>
     <div class="container">
@@ -30,9 +29,60 @@
                 <a href="#" class="btn btn-gradient">Bouton primaire</a>
                 <a href="#" class="btn btn-border">Bouton secondaire</a>
 
-                <label for="hello">Hello</label>
+                <label for="hello">Input</label>
                 <input type="text" name="hello">
 
+                <div class="horizontal-slider-container">
+                    <div class="horizontal-slider">
+                        <!-- element-->
+                        <a href="#" class="quiz quiz-3x">
+                            <div class="quiz-thumb" style="background-image: url('https://www.bainsyverdon.ch/fileadmin/_processed_/4/d/csm_Centre-Thermal-Yverdon-bains-exterieur-header_c_nuno-acacio_90d0b53ab1.jpg');">
+                                <h5>Yverdon, une ville cool as fuck</h5>
+                            </div>
+                            <div class="label">
+                                <small>Facile</small>
+                            </div>
+                        </a>
+                        <!-- .element -->
+
+                    <a href="#" class="quiz quiz-3x">
+                        <div class="quiz-thumb" style="background-image: url('https://www.bainsyverdon.ch/fileadmin/_processed_/4/d/csm_Centre-Thermal-Yverdon-bains-exterieur-header_c_nuno-acacio_90d0b53ab1.jpg');">
+                            <h5>Yverdon, une ville historique</h5>
+                        </div>
+                        <div class="label">
+                            <small>Facile</small>
+                        </div>
+                    </a>
+
+                    <a href="#" class="quiz quiz-3x">
+                        <div class="quiz-thumb" style="background-image: url('https://www.bainsyverdon.ch/fileadmin/_processed_/4/d/csm_Centre-Thermal-Yverdon-bains-exterieur-header_c_nuno-acacio_90d0b53ab1.jpg');">
+                            <h5>Yverdon, une ville historique</h5>
+                        </div>
+                        <div class="label">
+                            <small>Facile</small>
+                        </div>
+                    </a>
+
+                    <a href="#" class="quiz quiz-3x">
+                        <div class="quiz-thumb" style="background-image: url('https://www.bainsyverdon.ch/fileadmin/_processed_/4/d/csm_Centre-Thermal-Yverdon-bains-exterieur-header_c_nuno-acacio_90d0b53ab1.jpg');">
+                            <h5>Yverdon, une ville historique</h5>
+                        </div>
+                        <div class="label">
+                            <small>Facile</small>
+                        </div>
+                    </a>
+
+                    <a href="#" class="quiz quiz-3x">
+                        <div class="quiz-thumb" style="background-image: url('https://www.bainsyverdon.ch/fileadmin/_processed_/4/d/csm_Centre-Thermal-Yverdon-bains-exterieur-header_c_nuno-acacio_90d0b53ab1.jpg');">
+                            <h5>Yverdon, une ville historique</h5>
+                        </div>
+                        <div class="label">
+                            <small>Facile</small>
+                        </div>
+                    </a>
+
+                </div>
+            </div>
             </div>
         </div>
     </div>
