Regions list design

--- a/_webdesign/index.html
+++ b/_webdesign/index.html
@@ -83,6 +83,46 @@
 
                 </div>
             </div>
+
+
+
+                
+
+
+            </div>
+        </div>
+        <div class="row my-5">
+            <div class="col-12"><h2>Regions</h2></div>
+
+            <div class="col-6 region-container my-2">
+                <a href="#" class="">
+                    <div class="region">
+                        <div class="card-text">
+                            <h4>Yverdon-les-Bains</h4>
+                        </div>
+                        <img src="https://www.bainsyverdon.ch/fileadmin/_processed_/4/d/csm_Centre-Thermal-Yverdon-bains-exterieur-header_c_nuno-acacio_90d0b53ab1.jpg" class="card-img-top" alt="">
+                    </div>
+                </a>
+            </div>
+            <div class="col-6 region-container my-2">
+                <a href="#" class="">
+                    <div class="region">
+                        <div class="card-text">
+                            <h4>Yverdon-les-Bains</h4>
+                        </div>
+                        <img src="https://www.bainsyverdon.ch/fileadmin/_processed_/4/d/csm_Centre-Thermal-Yverdon-bains-exterieur-header_c_nuno-acacio_90d0b53ab1.jpg" class="card-img-top" alt="">
+                    </div>
+                </a>
+            </div>
+            <div class="col-6 region-container my-2">
+                <a href="#" class="">
+                    <div class="region">
+                        <div class="card-text">
+                            <h4>Yverdon-les-Bains</h4>
+                        </div>
+                        <img src="https://www.bainsyverdon.ch/fileadmin/_processed_/4/d/csm_Centre-Thermal-Yverdon-bains-exterieur-header_c_nuno-acacio_90d0b53ab1.jpg" class="card-img-top" alt="">
+                    </div>
+                </a>
             </div>
         </div>
     </div>
